JEDIT 2.5 VERSION HISTORY

* Version 2.5pre6

+ Bug Fixes

- Initial size of plugin download progress dialog box was wrong
- 'Replace All' with the directory file set didn't work
- By not specifying a 'To:' field, the 'Send' command could trigger anti-spam
  filters
- 'Latest Version' plugin could throw a NoSuchMethodError
- Home/end keys would behave incorrectly if smart home/end was disabled
  (since 2.5pre5)
- End key could throw an exception (since 2.5pre5)
- Plugin manager didn't show newly installed JARs in list (since 2.5pre3)
- WorkThread.waitForRequests() had a subtle bug, which only manifested
  when doing a replace all with the directory file set (since 2.5pre1)

* Version 2.5pre5

+ New Features

- Improved home/end commands; they now go to the first/last non-whitespace
  character on the current line, then the start/end of the line, and then
  to the first/last visible line. Also, even if, for example, the caret is
  already at the start of the line, HOME still needs to be pressed three
  times to go to the start of the viewscreen. This should make these
  commands more reliable in macros

+ Enhancements

- 'Go to End Of Indent' command removed (just press HOME instead); shortcut
  of 'Indent Selected Lines' changed to C+i
- 'Create new java file' and 'Create new java applet' macros added
  (Valery Kondakoff)
- 'Print' command now prints a footer with the date/time and page number
  at the bottom of each page
- The help viewer now displays plain text files in a monospaced font
- Many dialog boxes tweaked to comply with Java look & feel guidelines;
  as a result they look better
- Improved 'Send' command error handling
- Documentation updates

+ Bug Fixes

- Fixed incorrect error message displayed when a plugin depends on another
  one that isn't installed
- Plugin manager's 'update' feature didn't work (since 2.5pre3)
- Minor changes to scrolling code, might solve recently reported problems
  when running on Java 2