@@ -158,8 +158,6 @@ public class Buffer extends SyntaxDocument implements EBComponent
 		{
 			public void run()
 			{
-				System.err.println(Buffer.this + ": load cleanup");
-
 				undo = new UndoManager();
 				setFlag(LOADING,false);
 
@@ -1825,6 +1823,9 @@ public class Buffer extends SyntaxDocument implements EBComponent
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.156  2000/06/12 02:43:29  sp
+ * pre6 almost ready
+ *
  * Revision 1.155  2000/06/06 04:38:08  sp
  * WorkThread's AWT request stuff reworked
  *
