@@ -2,6 +2,10 @@ JEDIT 2.5 VERSION HISTORY
 
 * Version 2.5pre6
 
++ Enhancements
+
+- Caret register code is now more efficent
+
 + Bug Fixes
 
 - Initial size of plugin download progress dialog box was wrong
@@ -15,6 +19,8 @@ JEDIT 2.5 VERSION HISTORY
 - Plugin manager didn't show newly installed JARs in list (since 2.5pre3)
 - WorkThread.waitForRequests() had a subtle bug, which only manifested
   when doing a replace all with the directory file set (since 2.5pre1)
+- Possible fix for bug where keys pressed in the 'find' field would be
+  forwarded to the text area also
 
 * Version 2.5pre5
 
